--- a/styles/styles.css
+++ b/styles/styles.css
@@ -310,21 +310,18 @@ p {
 }
 
 .minioverlay-text {
-   position: absolute;
+  position: absolute;
   bottom: 0;
-  width: 100%; 
-  font-weight: 700;  
-  line-height: 1.14; 
+  width: 100%;
+  font-weight: 700;
+  line-height: 1.14;
   height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-transform: uppercase;   
-  color: var(--background-color);  
+  text-transform: uppercase;
+  color: var(--background-color);
   background: rgba(47, 48, 58, 0.8);
-  
-
-
 }
 
 /* section4 */
@@ -491,6 +488,9 @@ p {
   align-items: baseline;
   gap: 70px;
 }
+.footer-group {
+  margin-right: auto;
+}
 
 .footer-text {
   margin-bottom: 20px;
@@ -525,6 +525,44 @@ p {
 
 .footer-soc-link {
   fill: currentColor;
+}
+
+.footer-form-group {
+  display: flex;
+  gap: 12px;
+}
+
+.footer-form input {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  padding-right: 0;
+  border-radius: 4px;
+  width: 100%;
+}
+.footer-form-btn {
+  font-family: inherit;  
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  position: relative;
+  padding-left: 28px;
+  padding-right: 62px;
+  width: 200px;
+  height: 50px;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  border-radius: 4px;
+  cursor: pointer;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.footer-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: 55px;
+  transform: translate(-50%, -50%);
 }
 
 /* portfolio */
@@ -645,21 +683,20 @@ p {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; 
+  height: 100%;
 
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 250ms var(--cubic), 
-  visibility 250ms var(--cubic)
+  transition: opacity 250ms var(--cubic), visibility 250ms var(--cubic);
 }
 
-.is-hidden{
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-} 
+}
 
-.modal{
+.modal {
   width: 528px;
   height: 581px;
   position: absolute;
@@ -673,8 +710,7 @@ p {
   transition: transform 250ms var(--cubic);
 }
 
-
-.modal-btn{
+.modal-btn {
   position: absolute;
   width: 30px;
   height: 30px;
@@ -685,19 +721,16 @@ p {
   align-items: center;
   justify-content: center;
   color: #afb1b8;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 50%;
   border: 1px solid currentColor;
   transition: color 250ms var(--cubic);
   cursor: pointer;
 }
 .modal-btn:hover,
-.modal-btn:focus
-{ color: var(--accent-color);
-
+.modal-btn:focus {
+  color: var(--accent-color);
 }
-.modal-icon{
+.modal-icon {
   fill: currentColor;
 }
-
-
