--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
   --secondary-text-color: #ffffff;
   --owner-text-color: #757575;
   --accent-color: #2196f3;
-  --focus-btn:#188ce8;
+  --focus-btn: #188ce8;
   --contener-color: #eeeeee;
   --logo-color-text: #000000;
   --buttons-port-color: #f5f4fa;
@@ -231,7 +231,6 @@ p {
   border: none;
   transition: color 250ms var(--cubic);
 }
-
 
 .hero-btn:hover,
 .hero-btn:focus {
@@ -770,12 +769,12 @@ p {
   text-align: center;
   color: var(--main-text-color);
 }
- .modal-form-all{
+.modal-form-all {
   margin-bottom: 20px;
-} 
+}
 .modal-form-label {
   display: block;
-  
+
   margin-bottom: 4px;
 
   font-weight: 400;
@@ -820,22 +819,22 @@ p {
 .modal-form-message {
   display: block;
   width: 100%;
-  height: 120px;  
+  height: 120px;
   resize: none;
-  padding: 12px 16px;   
- 
+  padding: 12px 16px;
+
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: 1px solid transparent;
   outline-offset: -1px;
   transition: outline 250ms var(--cubic), box-shadow 250ms var(--cubic), color 250ms var(--cubic);
 }
-.modal-form-message::placeholder{ 
-font-weight: 400;
-font-size: 12px;
-line-height: 1.16;
-letter-spacing: 0.01em;
-color: rgba(117, 117, 117, 0.5);
+.modal-form-message::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 .modal-form-message:focus {
   outline: 1px solid #2196f3;
@@ -900,8 +899,7 @@ color: rgba(117, 117, 117, 0.5);
   color: var(--background-color);
   background-color: var(--accent-color);
   cursor: pointer;
-  transition:  background-color 250ms var(--cubic), 
-  box-shadow 250ms var(--cubic);
+  transition: background-color 250ms var(--cubic), box-shadow 250ms var(--cubic);
   border: none;
   border-radius: 4px;
 }
